# manim-generator-studio

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  dev.sh  pyproject.toml  supabase_schema.sql  swarm_trial.txt
backend/app/: generator.py  ingestion.py  renderer.py
backend/manim-docs-md/: changelog.md  conduct.md  contributing.md  examples.md  installation.md  plugins.md  reference.md  tutorials_guides.md
backend/manim-docs-md/changelog/: 0.1.0-changelog.md  0.1.1-changelog.md  0.10.0-changelog.md  0.11.0-changelog.md  0.12.0-changelog.md  0.13.0-changelog.md  0.13.1-changelog.md  0.14.0-changelog.md  0.15.0-changelog.md  0.15.1-changelog.md  0.15.2-changelog.md  0.16.0-changelog.md  0.17.0-changelog.md  0.17.1-changelog.md  0.17.2-changelog.md  0.17.3-changelog.md  0.18.0-changelog.md  0.19.0-changelog.md  0.2.0-changelog.md  0.3.0-changelog.md  0.4.0-changelog.md  0.5.0-changelog.md  0.6.0-changelog.md  0.7.0-changelog.md  0.8.0-changelog.md  0.9.0-changelog.md
backend/manim-docs-md/contributing/: development.md  docs.md  internationalization.md  performance.md  testing.md
backend/manim-docs-md/faq/: general.md  help.md  index.md  installation.md  internals.md  opengl.md
backend/manim-docs-md/guides/: add_voiceovers.md  configuration.md  deep_dive.md  index.md  using_text.md
backend/manim-docs-md/installation/: conda.md  docker.md  jupyter.md  uv.md
backend/manim-docs-md/reference/: manim._config.logger_utils.JSONFormatter.md  manim._config.logger_utils.md  manim._config.md  manim._config.utils.ManimConfig.md  (+373 more)
(+30 files in other folders)
