[project]
name = "manim-generator-studio"
version = "0.1.0"
description = "Visuals generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.122.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "manim==0.19.0",
    "supabase==2.24.0",
    "langchain-google-genai==3.2.0",
    "langchain-pinecone==0.2.13",
    "langchain-community==0.4.0",
    "beautifulsoup4==4.14.2",
    "lxml==6.0.2",
    "markdownify>=1.2.2",
    "langchain>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-cohere>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
